[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/tank/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/tank/BotTank.gd" type="Script" id=2]

[node name="BotTank" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="DetectRadius" type="Area2D" parent="." index="9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_Tank_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_Tank_exited"]
